--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.0",
-    "@turf/turf": "^7.2.0",
-    "proj4": "^2.17.0",
     "d3": "^7.8.0",
     "xlsx": "^0.18.5",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
     "pinia": "^2.1.0",
-    "core-js": "^3.8.3",
-    "sortablejs": "^1.15.6"
+    "core-js": "^3.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
