--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.0",
+    "core-js": "^3.8.3",
     "d3": "^7.8.0",
-    "xlsx": "^0.18.5",
-    "vue": "^3.2.13",
-    "vue-router": "^4.5.1",
     "pinia": "^2.1.0",
-    "core-js": "^3.8.3"
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
